--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "@taquito/beacon-wallet": "^11.1.0",
     "@taquito/taquito": "^10.2.0"
   }
 }
